# new_kubera

./: .dockerignore  .env.example  .gitignore  3_features.md  Dockerfile  PROGRESS.md  README.md  alembic.ini  celerybeat-schedule  change_password.py  create_company.py  debug_script.py  delete_company.py  delete_user.py  docker-compose.yml  e2e_compliance.py  e2e_notifications_activity.py  fix_test.py  frontend_reference_guide.md  generate_docs.py  kubera_frontend_build_plan_v2.md  kubera_full_api_reference.md  kubera_v1_build_plan.md  list_companies.py  list_users.py  mama  migrate.py  parse_alembic.py  patch_docs.py  plan_for_build.md  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0cb481774093_add_has_children.py  4709dd02ce22_fk_name.py  (+20 more)
app/: auth.py  config.py  database.py  encryption.py  main.py  rate_limit.py  worker.py
docs/: TECHNOLOGY_STACK.md  auditease_net_loss_bug_log.md  company-onboarding-plan.md  handoff_auditease_slice3.md
frontend/: .eslintrc.cjs  .gitignore  Dockerfile  README.md  check_errors.mjs  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
tests/: conftest.py  test_account_admin.py  test_activity_notifications.py  test_assets.py  test_auditease.py  test_auditor_duplicate_invites.py  test_auditor_invite_regression.py  test_auth.py  test_company_onboarding.py  test_compliance.py  test_custom_fields.py  test_docvault.py  test_encryption.py  test_kra.py  test_sales.py
unit_tests/: test_mapping_import.py
(+249 files in other folders)
