[project]
name = "kubera"
version = "0.1.0"
description = "Kubera backend — FastAPI + SQLAlchemy audit/compliance platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.3",
    "sqlalchemy[asyncio]==2.0.41",
    "asyncpg==0.31.0",
    "alembic==1.16.2",
    "pydantic==2.11.5",
    "pydantic-settings==2.9.1",
    "python-jose[cryptography]==3.4.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.20",
    "email-validator==2.2.0",
    "celery[redis]==5.5.3",
    "redis==5.2.1",
    "cryptography==45.0.4",
    "httpx==0.28.1",
    "anyio==4.9.0",
    "aiofiles==23.2.1",
    "openpyxl>=3.1.0",
]

[dependency-groups]
dev = [
    "pytest==8.4.1",
    "pytest-asyncio==1.0.0",
]

[tool.uv]
# This is an application, not a distributable library: dependencies are installed
# into the environment, and the `app` package is imported from the working
# directory (PYTHONPATH). There is nothing to build/install for the project itself.
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Import `app` and `tests` from the repo root without needing PYTHONPATH set.
pythonpath = ["."]
